--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 					<h6>Send your secret message through image to family and friends</h6>
 					<h6>Send your secret message through image to family and friends</h6>
 					
-					The program is totally client side execution and open sourced. Feel free to leave me feedback and use it anyway you like. 
+					The program is all client side execution and open sourced. Feel free to leave me feedback and contact me at <a href="github.com/tomshih/steganography"><i class="fa fa-github" aria-hidden="true"></i> github</a>. 
 				</blockquote>
 			</figure>
 		</div>
@@ -365,7 +365,7 @@
 									</div>
 								</div>
 								<input style="width:30px;" type="checkbox" id="cb_utf8_16" name="cb_utf8_16" value="">
-								<label class="fieldlabels" class="fieldlabels" for="cb_utf8_16"> UTF-8 International Language</label><br>
+								<label class="fieldlabels" class="fieldlabels" for="cb_utf8_16"> Text contains utf-8 international characters. eg. Chinese, Japanese, Korean </label><br>
 								<label class="fieldlabels">Select Text File:</label>
 								<input type="file" id="hidingTextFile" />
 								<p><span style="font-weight:700;">OR</span> Input Text At Below:</p>
