--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 					<h6>Send your secret message through image to family and friends</h6>
 					<h6>Send your secret message through image to family and friends</h6>
 					
-					The program is all client side execution and open sourced. Feel free to leave me feedback and contact me at <a href="github.com/tomshih/steganography"><i class="fa fa-github" aria-hidden="true"></i> github</a>. 
+					The program is all client side execution and open sourced. Feel free to leave me feedback and contact me at <a href="http://github.com/tomshih/steganography"><i class="fa fa-github" aria-hidden="true"></i> github</a>. 
 				</blockquote>
 			</figure>
 		</div>
