--- a/index.html
+++ b/index.html
@@ -449,9 +449,8 @@
 					This concept is like hiding a tree in the forest. Therefore, hackers will be hard to find the imporant information of you in a plain text file. You can it use for:
 					<h6 style="margin-top:10px;">Protect your username and password in image</h6>
 					<h6>Send your secret message through image to family and friends</h6>
-					<h6>Send your secret message through image to family and friends</h6>
 					
-					The program is all client side execution and open sourced. Feel free to leave me feedback and contact me at <a href="github.com/tomshih/steganography"><i class="fa fa-github" aria-hidden="true"></i> github</a>. 
+					The program is all client side execution and open sourced. Feel free to leave me feedback and contact me at <a href="http://github.com/tomshih/steganography"><i class="fa fa-github" aria-hidden="true"></i> github</a>. 
 				</blockquote>
 			</figure>
 		</div>
